ADD_SUBDIRECTORY( SeqWiresLib )
ADD_SUBDIRECTORY( Seq2tapeLib )
ADD_SUBDIRECTORY( SeqWiresLibUi )

ADD_SUBDIRECTORY( Plugins/Smf/Plugin )
ADD_SUBDIRECTORY( Plugins/Smf/Tests )

ADD_SUBDIRECTORY( BabelWiresAudio )

ADD_SUBDIRECTORY( Seq2tapeExe )

ADD_SUBDIRECTORY( Tests/TestUtils )
ADD_SUBDIRECTORY( Tests/SeqWiresLib )
ADD_SUBDIRECTORY( Tests/Seq2tapeLib )
