ADD_SUBDIRECTORY( MusicLib )
ADD_SUBDIRECTORY( Seq2tapeLib )
ADD_SUBDIRECTORY( MusicLibUi )

ADD_SUBDIRECTORY( Plugins/Smf/Plugin )
ADD_SUBDIRECTORY( Plugins/Smf/Tests )

ADD_SUBDIRECTORY( Seq2tapeExe )

ADD_SUBDIRECTORY( Tests/TestUtils )
ADD_SUBDIRECTORY( Tests/MusicLib )
ADD_SUBDIRECTORY( Tests/Seq2tapeLib )
